<resources>
    <string name="app_name">Delhi Tour</string>
    <string name="attraction">Attractions</string>
    <string name="shop">Shop</string>
    <string name="activity">Activities</string>
    <string name="book">Book tickets</string>
    <string name="what">What?</string>
    <string name="when">When?</string>
    <string name="where">Where?</string>
    <string name="maps">Open in maps</string>
    <string name="how_much">How Much?</string>
    <string name="description">Description</string>
    <string name="eat">Eat</string>
    <string name="act_details">Activtiy Details</string>
    <string name="attr_details">Attraction Details</string>
    <string-array name="attraction_name">
        <item>The Red Fort</item>
        <item>Qutub Minar</item>
        <item>Humayun\'s Tomb</item>
        <item>India Gate</item>
        <item>Jama Masjid</item>
        <item>Lotus Temple</item>
        <item>Akshardham</item>
        <item>Old Fort</item>
        <item>Lodhi Garden</item>
        <item>Jantar Mantar</item>
    </string-array>
    <string-array name="attraction_description_short">
        <item>Iconic 1600s imperial residence and museum</item>
        <item>5-storey victory tower with balconies</item>
        <item>Palatial 16th-century tomb of Humayun</item>
        <item>1920s triumphal arch and war memorial</item>
        <item>Vast, 17th-century Mughal-style mosque</item>
        <item>Temple with a flower-like design</item>
        <item>Modern temple celebrating Indian arts</item>
        <item>Riverside fortress with Mugal-era gates</item>
        <item>80-acre city park inaugurated in 1936</item>
        <item>18th-century astronomy complex</item>
    </string-array>
    <string-array name="attraction_description_long">
        <item>
            The Red Fort is a historical fort in the city of Delhi in India. It was the main residence of the emperors of the Mughal dynasty for nearly 200 years, until 1857. It is located in the center of Delhi and houses a number of museums. In addition to accommodating the emperors and their households, it was the ceremonial and political centre of the Mughal state and the setting for events critically impacting the region.\n\n
Constructed in 1639 by the fifth Mughal Emperor Shah Jahan as the palace of his fortified capital Shahjahanabad, the Red Fort is named for its massive enclosing walls of red sandstone and is adjacent to the older Salimgarh Fort, built by Islam Shah Suri in 1546. The imperial apartments consist of a row of pavilions, connected by a water channel known as the Stream of Paradise (Nahr-i-Bihisht). The fort complex is considered to represent the zenith of Mughal creativity under Shah Jahan, and although the palace was planned according to Islamic prototypes, each pavilion contains architectural elements typical of Mughal buildings that reflect a fusion of Timurid and Persian traditions. The Red Fort’s innovative architectural style, including its garden design, influenced later buildings and gardens in Delhi, Rajasthan, Punjab, Kashmir, Braj, Rohilkhand and elsewhere.
        </item>
        <item>
            Qutub Minar is a minaret that forms part of the Qutb complex, a UNESCO World Heritage Site in the Mehrauli area of Delhi, India. Made of red sandstone and marble, Qutub Minar is a 73-metre (240 feet) tall tapering tower of five storeys, with a 14.3 metre (47 feet) base diameter, reducing to 2.7 metres (9 feet) at the peak. It contains a spiral staircase of 379 steps. Its design is thought to have been based on the Minaret of Jam, in western Afghanistan.\n\n
Qutb al-Din Aibak, founder of the Delhi Sultanate, started construction of the Qutub Minar\'s first storey around 1192. In 1220, Aibak\'s successor and son-in-law Iltutmish completed a further three storeys. In 1369, a lightning strike destroyed the top storey. Firoz Shah Tughlaq replaced the damaged storey, and added one more.
        </item>
        <item>
            Humayun\'s tomb (Maqbara e Humayun) is the tomb of the Mughal Emperor Humayun in Delhi, India. The tomb was commissioned by Humayun\'s first wife and chief consort, Empress Bega Begum (also known as Haji Begum), in 1569&#8211;70, and designed by Mirak Mirza Ghiyas, a Persian architect chosen by her. It was the first garden&#8211;tomb on the Indian subcontinent, and is located in Nizamuddin East, Delhi, India, close to the Dina&#8211;panah Citadel, also known as Purana Qila (Old Fort), that Humayun founded in 1533. It was also the first structure to use red sandstone at such a scale. The tomb was declared a UNESCO World Heritage Site in 1993, and since then has undergone extensive restoration work, which is complete. Besides the main tomb enclosure of Humayun, several smaller monuments dot the pathway leading up to it, from the main entrance in the West, including one that even pre&#8211;dates the main tomb itself, by twenty years; it is the tomb complex of Isa Khan Niyazi, an Afghan noble in Sher Shah Suri\'s court of the Suri dynasty, who fought against the Mughals, constructed in 1547 CE.
        </item>
        <item>
            The India Gate, (originally called the All India War Memorial), is a war memorial located astride the Rajpath, on the eastern edge of the ‘ceremonial axis’ of New Delhi, India, formerly called Kingsway. India Gate is a memorial to 82,000 soldiers of the Indian Army who died in the period 1914–21 in the First World War, in France, Flanders, Mesopotamia, Persia, East Africa, Gallipoli and elsewhere in the Near and the Far East, and the Third Anglo Afghan War. 13,300 servicemen\'s names, including some soldiers and officers from the United Kingdom, are inscribed on the gate. The India Gate, even though a war memorial, evokes the architectural style of the triumphal arch like the Arch of Constantine, outside the Colosseum in Rome, and is often compared to the Arc de Triomphe in Paris, and the Gateway of India in Mumbai. It was designed by Sir Edwin Lutyens.
        </item>
        <item>
            The Masjid-i Jahān-Numā (World-reflecting Mosque), commonly known as the Jama Masjid of Delhi, is one of the largest mosques in India.\n\n
It was built by Mughal emperor Shah Jahan between 1644 and 1656 at a cost of 1 million rupees, and was inaugurated by an imam from Bukhara, present-day Uzbekistan. The mosque was completed in 1656 AD with three great gates, four towers and two 40 m high minarets constructed of strips of red sandstone and white marble. The courtyard can accommodate more than 25,000 persons. There are three domes on the terrace which are surrounded by the two minarets. On the floor, a total of 899 black borders are marked for worshippers. The architectural plan of Badshahi Masjid, built by Shah Jahan\'s son Aurangzeb at Lahore, Pakistan, is similar to the Jama Masjid, Delhi.
        </item>
        <item>
            The Lotus Temple, located in Delhi, India, is a Bahá\'í House of Worship completed in 1986. Notable for its flowerlike shape, it has become a prominent attraction in the city. Like all Bahá\'í Houses of Worship, the Lotus Temple is open to all, regardless of religion or any other qualification. The building is composed of 27 free-standing marble-clad "petals" arranged in clusters of three to form nine sides, with nine doors opening onto a central hall with height of slightly over 40 metres and a capacity of 2,500 people. The Lotus Temple has won numerous architectural awards and been featured in hundreds of newspaper and magazine articles. A 2001 CNN report referred to it as the most visited building in the world.
        </item>
        <item>
            Akshardham or Swaminarayan Akshardham complex is a Hindu mandir, and a spiritual-cultural campus in New Delhi, India. Also referred to as Akshardham Temple or Swaminarayan Akshardham, the complex displays millennia of traditional Hindu and Indian culture, spirituality, and architecture.\n\n
The temple, which attracts approximately 70 percent of all tourists who visit Delhi, was officially opened on 6 November 2005 by Dr. A.P.J. Abdul Kalam. It sits near the banks of the Yamuna adjacent to the 2010 Commonwealth Games village in eastern New Delhi. The temple, at the centre of the complex, was built according to the Vastu shastra and Pancharatra shastra.
        </item>
        <item>
            Purana Qila (Old Fort) is one of the oldest forts in Delhi. Its current form was built by Sher Shah Suri, the founder of the Sur Empire. Sher Shah raised the citadel of Purana Qila with an extensive city-area sprawling around it. It is believed that the Purana Qila was still incomplete at Sher Shah\'s death in 1545, and was perhaps completed by his son Islam Shah, although it is not certain which parts were built by whom.\n\n
Excavations carried out by Archaeological Survey of India (ASI) at Purana Quila in 1954-55 (trial trenches) and again 1969-1973 by its Director, B B Lal, have unearthed Painted Grey Ware dating to 1000 BCE.
        </item>
        <item>
            Lodi Gardens or Lodhi Gardens is a city park situated in New Delhi, India. Spread over 90 acres (360,000 m2), it contains, Mohammed Shah\'s Tomb, Tomb of Sikandar Lodi, Shisha Gumbad and Bara Gumbad, architectural works of the 15th century by Lodis- who ruled parts of northern India and Punjab and Khyber Pakhtunkhwa province of modern-day Pakistan, from 1451 to 1526. The site is now protected by the Archaeological Survey of India (ASI).\n\n
The gardens are situated between Khan Market and Safdarjung\'s Tomb on Lodhi Road and is a hotspot for morning walks for the Delhiites.
        </item>
        <item>
            Jantar Mantar is located in the modern city of New Delhi. It consists of 13 architectural astronomy instruments. The site is one of five built by Maharaja Jai Singh II of Jaipur, from 1723 onwards, as he was given by Mughal emperor Muhammad Shah the task of revising the calendar and astronomical tables. There is a plaque fixed on one of the structures in the Jantar Mantar observatory in New Delhi that was placed there in 1910 mistakenly dating the construction of the complex to the year 1710. Later research, though, suggests 1724 as the actual year of construction.\n\n
The primary purpose of the observatory was to compile astronomical tables, and to predict the times and movements of the sun, moon and planets. Some of these purposes nowadays would be classified as astronomy.
        </item>
    </string-array>
    <string-array name="activities_name">
        <item>Para Motoring</item>
        <item>Go Karting</item>
        <item>Segway Tour</item>
        <item>Camping</item>
        <item>Gaming Vegas</item>
        <item>Ice Skating</item>
        <item>Trekking</item>
    </string-array>
</resources>